
syntax = "proto3";

package com.pbsaas.connect.proto;

message ChatFriendBuff {
	
	 string toUser = 1;
	
	 string sendFrom = 2;
	
	 int32 reqStatus = 3;
	
	 string nickName = 4;
		
	 string  acceptDate = 5;
	
	 string  createDate = 6;
	
}

message FriendListRsp {

    repeated ChatFriendBuff friends = 1;
}

